<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="inserterUnLoadImage" Id="{231e0c02-f2ca-4c36-91e7-652a8ba56844}">
    <Declaration><![CDATA[TYPE inserterUnLoadImage :
STRUCT
	
 // Входове
   xGrip_open 	        : imageIO := ( stIO   := Stations.insertUnloadHmiIO.x_Grip_open,
									   image  := ADR(Global.INPUT_IMAGE),
									   iType  := ioType.INPUT_BIT,
									   iByte  := 18,
									   iBit   := 4 );	
									   
   xGrip_close			: imageIO := ( stIO   := Stations.insertUnloadHmiIO.x_Grip_close,
									   image  := ADR(Global.INPUT_IMAGE),
									   iType  := ioType.INPUT_BIT,
									   iByte  := 18,
									   iBit   := 5 );

    xInsert_up 			: imageIO := ( stIO   := Stations.insertUnloadHmiIO.x_Insert_up,
									   image  := ADR(Global.INPUT_IMAGE),
									   iType  := ioType.INPUT_BIT,
									   iByte  := 18,
									   iBit   := 6 );
									   
    xInsert_down 		: imageIO := ( stIO   := Stations.insertUnloadHmiIO.x_Insert_down,
									   image  := ADR(Global.INPUT_IMAGE),
									   iType  := ioType.INPUT_BIT,
									   iByte  := 18,
									   iBit   := 7 );									   	   
									   
    xNest 			    : imageIO := ( stIO   := Stations.insertUnloadHmiIO.x_Nest,
									   image  := ADR(Global.INPUT_IMAGE),
									   iType  := ioType.INPUT_BIT,
									   iByte  := 3,
									   iBit   := 1 );

	// Изходи								   									   
    yGrip_open 			: imageIO := ( stIO   := Stations.insertUnloadHmiIO.y_Grip_open,
									   image  := ADR(Global.OUTPUT_IMAGE),
									   iType  := ioType.OUTPUT_BIT,
									   iByte  := 150,
									   iBit   := 2 ); 

    yGrip_close 		: imageIO := ( stIO   := Stations.insertUnloadHmiIO.y_Grip_close,
									   image  := ADR(Global.OUTPUT_IMAGE),
									   iType  := ioType.OUTPUT_BIT,
									   iByte  := 150,
									   iBit   := 3 ); 

    yInsert_up 			: imageIO := ( stIO   := Stations.insertUnloadHmiIO.y_Insert_up,
									   image  := ADR(Global.OUTPUT_IMAGE),
									   iType  := ioType.OUTPUT_BIT,
									   iByte  := 150,
									   iBit   := 7 ); 

    yInsert_down 		: imageIO := ( stIO   := Stations.insertUnloadHmiIO.y_Insert_down,
									   image  := ADR(Global.OUTPUT_IMAGE),
									   iType  := ioType.OUTPUT_BIT,
									   iByte  := 150,
									   iBit   := 6 ); 	

	  

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>